<?xml version="1.0" encoding="utf-8"?>
<resources>
        <!-- Static strings -->
    <string name="app_name">RuterReise</string>
    
    <!-- Front page -->
    <string name="realtime">Realtime</string>
    <string name="departures">Departures</string>
    <string name="route">Travel planner</string>
    <string name="now">Now</string>
    <string name="legacyMessage">Your version of android is unfortunatly too old. If you want to continue using Trafikanten\'s mobile application you will need to download "Trafikanten Android 1.5" from market. \n\nThe market page should open when you click ok.</string>
    
    <!-- SelectRoute -->
    <string name="searchForRoutes">Search for travel proposals</string>
    <string name="calculateRouteResults">Find travel proposals</string>
    <string name="selectStations">Select Stations</string>
    <string name="transportTypes">Transporttypes</string>
    <string name="safeMargin">Safe margin between each stop</string>
    <string name="advancedOptions">Advanced options</string>
    <string name="changeSettings">Change Settings</string>
    <string name="maxProposals">Maximum number of proposals</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="proposals">Proposals</string>
    <string name="when">When</string>

    <string name="prioritize">Prioritize</string>
    <string name="prioritizeHint">Prefer shortest traveltime/direct travel</string>
    <string name="directRoute">Direct travel</string>
    <string name="shortTravel">Shortest traveltime</string>
    <string name="allTransportsEnabled">Travel with any transporttype</string>
    
    <string name="selectWhereToTravelTo">Select where to travel to</string>
    <string name="selectWhereToTravelFrom">Select where to travel from</string>
    <string name="travelingFrom">Traveling from</string>
    <string name="travelingTo">Traveling to</string>
    <string name="travelFrom">Traveling From</string>
    <string name="travelTo">Traveling To</string>

    <string name="setChangeMargin">Set change margin</string>
    <string name="setProposals">Max proposals</string>
    
    <string name="travelAt">Travel at</string>
    <string name="arriveBefore">Arrive before</string>
    
    <!-- Transporttypes: -->
    <string name="transportBus">Bus</string>
    <string name="transportAirportBus">AirportBus</string>
    <string name="transportAirportTrain">AirportTrain</string>
    <string name="transportBoat">Boat</string>
    <string name="transportTrain">Train</string>
    <string name="transportTram">Tram</string>
    <string name="transportMetro">Metro</string>
    
    <!-- <string name="avoidWalking">Avoid walking</string> -->
    <string name="changeMargin">Change margin</string>
    
    <string name="search">Search</string>
    
    <!-- SelectRouteView -->
    <string name="pleaseSelectFrom">Please select station to travel from</string>
    <string name="pleaseSelectTo">Please select station to travel to</string>
    
    <!-- SelectStation -->
    <string name="search_for_station">Search for station</string>
    <string name="searchStationHint">Search for a station in the search field.\n\n
Click the menu button for more options.\n
You can make a shortcut on the home screen:\n
  - Stations near me (using gps).\n
  - Realtime data for a station.\n
Longpress on a station to mark it as favorite.\n
\n\n
Please rate the app on android market!</string>
    <string name="searchStationRealtimeNoStationsFound">No stations found.\n\n
Note that only stations with realtime data will show here. Try using the travel planner!\n
You can also click menu and search for an address instead.</string>
    <string name="searchStationRouteNoStationsFound">No stations found.\n\n
Try clicking menu and searching for an address instead!</string>
	<string name="selectMultipleStations">Select multiple stations</string>
	<string name="favorites">Favorites</string>

        <!-- SelectStationView -->
        <string name="showingRealtimeOnly">Showing only stations with realtime information.</string>
        <string name="address">Address Search</string>
        <string name="map">Map</string>
		<string name="contact">Contact</string>
        <string name="addFavorite">Add to favorites</string>
        <string name="removeFavorite">Remove from favorites</string>
        <string name="removeHistory">Remove from history</string>

        <!-- OverviewRouteView -->
        <string name="travelAlternatives">Travel alternatives:</string>
        <string name="departure">Departure:</string>
        <string name="arrival">Arrival:</string>
        <string name="transport">Transport:</string>

        <!-- DetailedRouteView -->
        <string name="detailedRouteHeader">Detailed travel proposal:</string>
        <string name="travelTime">Travel time</string>
        <string name="waitTime">Wait time</string>
        <string name="walk">Walk</string>
        <string name="noRoutesFound">No travel proposals found!</string>  
        <string name="routeLoading">Travel proposals loading…\n\n
Click a travel proposal for a detailed view!</string>
        
        <!-- GenericMap -->
        <string name="selectStation">Select a station</string>
        <string name="noLocationFound">No location found</string>
        <!-- GenericStationOverlay -->
        <string name="stationsMissingCoordsWillBeHidden">Some stations missing coordinates and will not be shown</string>
        
        <!-- RealtimeView -->
        <string name="ca">ca </string>
        <string name="unknown">unknown</string>
        <string name="congestion">kø </string>
        <string name="old">old</string>
        <string name="refresh">Refresh</string>
        <string name="realtimeEmpty">No information found!</string>
        <string name="warnings">Warnings</string>
        <string name="caHelpText">white color means realtime information is unavailable,
we fallback to travel planner information.</string>
		<string name="changeCaTextVisibility">Show/Hide help text</string>
		
		<!-- Favorites view -->
		<string name="favoritesEmpty">To add a realtime favorite, go to the realtime view and long press on a realtime departure.</string>
		
		<!--  Realtime Clock incorrect -->
		<string name="clockDiffTitle">Phone clock incorrect!</string>
		<string name="clockDiffTitleTimezone">Phone timezone incorrect!</string>
		<string name="clockDiffDescription">The local system clock does not match Trafikanten\'s server time!</string>
		<string name="clockDiffDescriptionTimezone">Timezone incorrect!\n\nYour timezone settings are incorrect, and the local clock is set to adjust it!\nThe correct timezone is %1$s while your phone is set to %2$s.</string>
		<string name="clockDiffDescriptionTimezoneError">The local system clock does not match Trafikanten\'s server time!\nAdditionally your phone can not load default android timezones. Your phone\'s timezone setting is set to %1$s.</string>
		<string name="clockDiffBodyHead">The realtime view will show data based on Trafikanten time, but reminders/travel planner data could be wrong!</string>
		<string name="clockDiffBodyYourClock">Your clock is</string>
		<string name="clockDiffBodyBehind">behind Trafikanten\'s time.</string>
		<string name="clockDiffBodyAhead">ahead of Trafikanten\'s time.</string>
        
        <!-- LocationTask -->
        <string name="locationWaiting">Waiting for location…</string>
        <string name="current">Accuracy :</string>
        <string name="noLocationFoundError">No location found, please wait or click back to cancel</string>
        <string name="locationContinue">Continue</string>
        
        <!-- ShowDeviTask -->
        <string name="validFrom">Valid from</string>
        <string name="deviTitle">Trafikanten - Deviations</string>
        
        <!-- SearchAddressTask -->
        <string name="failedToFindAddress">Failed to locate address on map</string>
        <string name="searchAddressTask">Search for address:</string>
        <string name="addressHint">Address</string>
        
		<!-- SelectContactTask -->
		<string name="multipleAddressesFound">Multiple addresses found, using first</string>
		<string name="selectContact">Select Contact</string>
        
        <!-- Notifications -->
        <string name="alarm">Alarm</string> <!-- This is shared by everything that can call notifications -->
        <string name="fromShort">from</string>
        
        <!--  Generic -->
        <string name="trafikantenErrorParse">Couldn\'t read data from Trafikanten.no.\nThis is server side and usually quickly fixed,\nplease try again later.</string>
        <string name="trafikantenErrorOther">Couldn\'t get data from Trafikanten.no\nPlease check your internet connection.</string>
        <string name="myLocation">My Location</string>
        <string name="settings">Settings</string>
        <string name="reset">Reset</string>
        <string name="help">Help</string>
        
        <!-- Tips -->
        <string name="tipFrontscreen">Tips will only be shown once per screen.\n\n* Click menu for more features.\n\nNew in this version:\n* Tips!\n* Travel planner screen changes!\n* Show routes on map!\n* Contact search back by popular demand!</string>
        <string name="tipRealtime">* Click menu for more features.\n\n* Longpress a departure to set alarms or show devi!</string>
        <string name="tipSelectRoute">* Click menu for more features.\n\n* Use select multiple stations to for example travel from (Oslo S or Oslo S [Tog]) to (Storo or Grefsen [Tog])!</string>
        <string name="tipDetailedRoute">* Press a departure to show realtime data.\n* Longpress a departure to set alarms!\n* Click menu for more features.</string>
        <!-- <string name="tipDetailedRouteRealtime">The information in brackets is departure platform.</string>  -->

        <!-- Settings -->
        <string name="splashscreen_preference">Splashscreen</string>
        <string name="title_splashscreen_preference">Disable</string>
        <string name="summary_splashscreen_preference">Do not show splashscreen</string>
        <string name="tracking_preference">Collect statistics on use</string>
        <string name="title_tracking_preference">Disable</string>
        <string name="summary_tracking_preference">Do not submit anonymous statistical usage-information</string>
        <string name="history_size_preference">History</string>
        <string name="title_history_size_preference">History size</string>
        <string name="summary_history_size_preference">Number of stations to remember in list</string>
        <string name="dialog_title_history_size_preference">Stations to remember</string>


</resources>
