<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <!-- Header: -->
	  <ImageView
	  android:id="@+id/departureHeaderIcon"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="3dip"
	  android:layout_marginLeft="3dip"
	  android:src="@drawable/icon_small"
	  />
    
	  <TextView android:id="@+id/departureHeader"
	  android:layout_height="wrap_content" 
	  android:layout_width="wrap_content"
	  android:textSize="23dip"
	  android:layout_marginTop="9dip"
	  android:layout_marginLeft="2dip"
	  android:layout_toRightOf="@+id/departureHeaderIcon"
	  android:textAppearance="?android:attr/textAppearanceMedium"
	  android:text="@string/travelAlternatives"/>
	  
	  <View
	  android:layout_width="fill_parent"
	  android:layout_height="1dip"
	  android:layout_below="@+id/departureHeaderIcon"
	  android:background="#313431" />
	  
	  
	  <!-- Info -->
    
	  <TextView android:id="@+id/departureTime"
	  android:layout_height="wrap_content" 
	  android:layout_width="wrap_content"
	  android:textSize="15dip"
	  android:layout_marginTop="2dip"
	  android:layout_marginLeft="7dip"
	  android:layout_below="@+id/departureHeaderIcon"
	  android:text="@string/departure"/>
	  
	  <TextView android:id="@+id/arrivalTime"
	  android:layout_height="wrap_content" 
	  android:layout_width="wrap_content"
	  android:textSize="15dip"
	  android:layout_marginTop="2dip"
	  android:layout_marginLeft="88dip"
	  android:layout_below="@+id/departureHeaderIcon"
	  android:text="@string/arrival"/>
	  
	  <TextView android:id="@+id/travelTypes"
	  android:layout_height="wrap_content" 
	  android:layout_width="wrap_content"
	  android:textSize="15dip"
	  android:layout_marginTop="2dip"
	  android:layout_marginLeft="150dip"
	  android:layout_below="@+id/departureHeaderIcon"
	  android:text="@string/transportTypes"/>
	  

    
    <!-- Content: -->
    <TextView
    	android:id="@+id/emptyText"
   		android:layout_marginTop="50dip"
    	android:layout_below="@+id/search"
    	android:layout_width="280dip"
    	android:layout_height="wrap_content"
    	android:layout_centerVertical="true"
    	android:layout_centerHorizontal="true"
    	android:text="@string/routeLoading"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
	  	android:layout_below="@+id/departureTime"
        />
    
</RelativeLayout>