<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout 
    	android:id="@+id/searchLine"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingLeft="8dip"
	    android:paddingRight="12dip"
	    android:paddingTop="5dip"
	    android:paddingBottom="0dip"
	    android:layout_marginBottom="5dip"
    	android:background="@drawable/android_search_plate_browser">
    
	    <EditText android:id="@+id/search"
	        android:singleLine="true"
	        android:layout_width="0dip"
	        android:layout_height="fill_parent"
	        android:hint="@string/search_for_station"

	        android:inputType="text"
	        android:imeOptions="actionSearch"
	        android:layout_weight="1.0"
	        android:gravity="center_vertical"
	        />
        
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="6dip"
            android:layout_marginBottom="4dip"
            android:background="@drawable/android_textfield_searchwidget"
        />
        
    </LinearLayout>
    
    <TextView
    	android:id="@+id/infoText"
    	android:layout_marginTop="30dip"
    	android:layout_below="@+id/searchLine"
    	android:layout_width="300dip"
    	android:layout_height="wrap_content"
    	android:layout_centerVertical="true"
    	android:layout_centerHorizontal="true"
    	android:text="@string/searchStationHint" />
    	
    	
    <Button
        android:id="@+id/multiSelectButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:text="@string/selectMultipleStations"
        />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/searchLine"
        android:layout_above="@+id/multiSelectButton"
        />
        
</RelativeLayout>
